# lnemail

./: .env.development  .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: e2e-nwc.yaml  e2e.yaml
frontend/: package.json  tailwind.config.js  tailwind.src.css
migrations/: env.py
migrations/versions/: 0297c48ec3e6_add_original_invoice_field.py  1a4bb4606f11_send_emails.py  4490abacfc6f_privacy_friendly_send_email_stats.py  4a750515a916_add_attachments_to_pending_outgoing_.py  4f4e11fa7a48_add_email_password_column.py  6f4361c3b2e1_add_delivery_status_tracking.py  a1b2c3d4e5f6_add_renewal_fields_to_email_accounts.py  c1274d3c1064_add_reply_fields_to_pending_outgoing_.py  de5e44bb1aae_initial_migration.py
scripts/: activate_account.py  create_account.py  fetch_fonts.sh  mail-agent.py  setup.sh
scripts/nwc-wallet/: README.md
src/lnemail/: config.py  db.py  main.py
src/lnemail/api/: endpoints.py
src/lnemail/core/: models.py  schemas.py  timeutils.py  tokens.py
src/lnemail/services/: email_service.py  lnd_service.py  tasks.py
src/lnemail/services/lnd/: lightning_pb2.py  lightning_pb2_grpc.py
src/lnemail/services/payments/: __init__.py  base.py  lnd_backend.py  multi.py  nwc_backend.py
src/lnemail/static/: SKILL.md  llms.txt  pgp-key.asc  robots.txt  skill.md
src/lnemail/static/css/: fontawesome-minimal.css  inbox-style.css  style.css  tailwind.css
src/lnemail/static/fonts/: inter.css  webfonts.css
src/lnemail/static/js/: inbox.js  main.js  payment.js
src/lnemail/static/js/improved/: api.js  auth.js  config.js  inbox.js  landing.js  main.js  state.js  ui.js  utils.js  webln.js
src/lnemail/templates/: base.html  inbox.html  index.html  tos.html
tests/: conftest.py  test_auth.py  test_email_body_extraction.py  test_new_invoice.py  test_pages.py  test_payments.py  test_renewal_status.py  test_renewal_task.py  test_send_attachments.py  test_send_email_integration.py  test_tokens.py
tests/e2e/: README.md  conftest.py  helpers.py  run.sh  test_inbox_send_and_read.py  test_renewal_flow.py  test_signup_and_login.py
tests/e2e/artifacts/: .gitignore
tests/e2e/nwc_wallet/: README.md  docker-compose.e2e-nwc.yaml  relay-config.toml  run-nwc.sh  wallet.py
