[tool.poetry]
name = "lnemail"
version = "0.1.0"
description = "Privacy-focused disposable email service using Lightning Network payments"
authors = ["LNemail Team <lnemail@lnemail.net>"]
readme = "README.md"
packages = [
    { include = "lnemail", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.23.2"}
sqlmodel = ">=0.0.24"
pydantic = ">=2.4.2"
pydantic-settings = ">=2.0.3"
loguru = ">=0.7.2"
rq = ">=1.15.1"
alembic = ">=1.12.1"
email-validator = ">=2.1.0"
grpcio = ">=1.59.2"
grpcio-tools = ">=1.59.2"
protobuf = ">=4.24.4"
redis = ">=5.0.1"
Jinja2 = ">=3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
black = ">=23.10.1"
isort = ">=5.12.0"
mypy = ">=1.6.1"
flake8 = ">=6.1.0"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
