[tool.poetry]
name = "lnemail"
version = "0.4.0"
description = "Privacy-focused disposable email service using Lightning Network payments"
authors = ["LNemail Team <lnemail@lnemail.net>"]
readme = "README.md"
packages = [
    { include = "lnemail", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.136.1"
fastapi-cache2 = ">=0.2.2"
uvicorn = {extras = ["standard"], version = ">=0.46.0"}
sqlmodel = ">=0.0.38"
pydantic = ">=2.13.3"
pydantic-settings = ">=2.14.0"
loguru = ">=0.7.3"
rq = ">=2.8.0"
alembic = ">=1.18.4"
email-validator = ">=2.3.0"
grpcio = ">=1.80.0"
grpcio-tools = ">=1.80.0"
protobuf = ">=6.33.6"
redis = ">=7.4.0"
Jinja2 = ">=3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
black = ">=26.3.1"
isort = ">=8.0.1"
mypy = ">=1.20.2"
flake8 = ">=7.3.0"
pre-commit = ">=4.6.0"

[tool.poetry.group.e2e.dependencies]
pytest-playwright = ">=0.5.2"
playwright = ">=1.49.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
norecursedirs = ["dev-data", "data", "migrations", "node_modules", "tests/e2e"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end browser tests requiring the full docker compose stack",
]
